finished dove! hooray! also avoid-wrap for better names

--- a/style.css
+++ b/style.css
@@ -663,6 +663,10 @@ body#starfruit {
     padding-top: 0px;
 }
 
+.avoidwrap {
+    display: inline-block;
+}
+
 @media only screen and (max-width: 720px){
 
     .programNotes h1 {
